# vibe-mesh

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  vibe-mesh.code-workspace
src/: main.py
tests/: basic_test.py
